# dora-ros

./: .gitignore  CMakeLists.txt  Dockerfile  Dora.urdf  README.md  common-issues.md  compile_commands.json  compose.yml  docker-compose.yml  dora_vaz.stl  package.xml  requirements.txt  rviz.dockerfile  test.py  test2.py  yolo.py
.devcontainer/: devcontainer.json
.github/workflows/: build-containers.yml  build-ros-container.yml  build-rviz-container.yml
.zed/: tasks.json
asd/: pyvenv.cfg
res/: dora.urdf
ros2_ws/: .clangd  dora.urdf  frames_2026-02-10_15.03.53.gv  frames_2026-02-10_18.47.39.gv
ros2_ws/src/controller/: CMakeLists.txt  package.xml
ros2_ws/src/controller/include/controller/: controller_node.hpp  frames.hpp  odometry_node.hpp  uart_handler.hpp
ros2_ws/src/controller/launch/: launch_dora.xml  launch_rviz.xml
ros2_ws/src/controller/res/: dora.urdf  dora.xacro  dora_config.rviz
ros2_ws/src/controller/src/: controller_node.cpp  main.cpp  mock_lidar.cpp  odometry_node.cpp  publisher_subscriber.cpp  uart_handler.cpp
ros2_ws/src/dora_navigation/config/: nav2_params.yaml
ros2_ws/src/dora_navigation/launch/: navigation_launch.py  slam_launch.py
ros2_ws/src/drift_control/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/drift_control/include/: drift.hpp
ros2_ws/src/drift_control/scripts/: teleop_key.py
ros2_ws/src/drift_control/src/: drift.cpp
ros2_ws/src/mi_wrapper/: package.xml  setup.cfg  setup.py
ros2_ws/src/mi_wrapper/mi_wrapper/: mi_wrapper.py
ros2_ws/src/teleop_control/: CMakeLists.txt  package.xml
ros2_ws/src/teleop_control/include/: drift.hpp
ros2_ws/src/teleop_control/launch/: launch_drift.xml
ros2_ws/src/teleop_control/scripts/: teleop_key.py
ros2_ws/src/teleop_control/src/: drift.cpp
scripts/: backup-from-docker.sh  build.sh  pull-and-run.sh  run.sh
src/: publisher_subscriber.cpp  uart_handler.cpp  uart_handler.hpp
