<?xml version="1.0"?>
<package format="2">
    <name>controller</name>
    <version>0.1.0</version>
    <description>The main controller node for DORA</description>
    <maintainer email="yo.mama@lego.com">John Lego</maintainer>
    <license>Apache-2.0</license>

    <depend>rclcpp</depend>
    <depend>geometry_msgs</depend>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>ros2run</exec_depend>
    <exec_depend>ros2launch</exec_depend>

    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>xacro</exec_depend>

    <exec_depend>rplidar_node</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
