<?xml version="1.0"?>
<package format="2">
    <name>teleop_control</name>
    <version>0.1.0</version>
    <description>Teleoperational node for keyboard.</description>
    <maintainer email="yo.mama@lego.com">John Lego</maintainer>
    <license>Apache-2.0</license>

    <depend>rclcpp</depend>
    <depend>rclpy</depend>
    <depend>geometry_msgs</depend>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <exec_depend>ros2run</exec_depend>
    <exec_depend>ros2launch</exec_depend>
    <exec_depend>python3-pygame</exec_depend> 

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>